fixed the footer for small pixels

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
     <footer>
         <div class="footer-section bg-gray-100">
-            <div class="footer border-t mx-64 p-12">
+            <div class="footer border-t mx-0 lg:mx-64 p-12">
                 <p class="text-center text-gray-600 font-light">© 2024 - John Zhenlly Alvarez. All rights reserved.</p>
             </div>
         </div>
